--- a/serenity-app/src/main/res/layout-large/activity_episode_browser.xml
+++ b/serenity-app/src/main/res/layout-large/activity_episode_browser.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<us.nineworlds.serenity.widgets.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
     android:background="@android:color/background_dark"
     android:layout_width="match_parent"
@@ -45,8 +45,19 @@
 
   </RelativeLayout>
 
-  <!-- The navigation drawer -->
+  <com.google.android.material.appbar.AppBarLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:background="@color/card_background"
+          >
 
-  <include layout="@layout/menu_drawer_with_navigation"/>
+    <include layout="@layout/movie_custom_actionbar"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginStart="@dimen/overscan_start_padding"
+            android:layout_marginEnd="@dimen/overscan_end_padding"/>
 
-</us.nineworlds.serenity.widgets.DrawerLayout>
+  </com.google.android.material.appbar.AppBarLayout>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
