--- a/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_banners.xml
+++ b/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_banners.xml
@@ -1,12 +1,10 @@
-<us.nineworlds.serenity.widgets.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/background_dark">
-
-    <!-- The main content view -->
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/tvshowBrowserLayout"
@@ -119,8 +117,19 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- The navigation drawer -->
+    <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/card_background"
+            >
 
-    <include layout="@layout/menu_drawer_with_navigation" />
+        <include layout="@layout/tvshow_custom_actionbar"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginStart="@dimen/overscan_start_padding"
+                android:layout_marginEnd="@dimen/overscan_end_padding"/>
 
-</us.nineworlds.serenity.widgets.DrawerLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
