--- a/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_seasons.xml
+++ b/serenity-app/src/main/res/layout-large/activity_tvbrowser_show_seasons.xml
@@ -1,6 +1,5 @@
-<us.nineworlds.serenity.widgets.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,7 +8,7 @@
 
   <!-- The main content view -->
 
-  <RelativeLayout xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
+  <RelativeLayout
       android:id="@+id/tvshowSeasonBrowserLayout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
@@ -96,6 +95,19 @@
 
   </RelativeLayout>
 
-  <include layout="@layout/menu_drawer_with_navigation"/>
+  <com.google.android.material.appbar.AppBarLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:background="@color/card_background"
+          >
 
-</us.nineworlds.serenity.widgets.DrawerLayout>
+    <include layout="@layout/tvshow_custom_actionbar"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginStart="@dimen/overscan_start_padding"
+            android:layout_marginEnd="@dimen/overscan_end_padding"/>
+
+  </com.google.android.material.appbar.AppBarLayout>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
