--- a/serenity-app/src/main/res/layout/movie_custom_actionbar.xml
+++ b/serenity-app/src/main/res/layout/movie_custom_actionbar.xml
@@ -1,97 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:paddingTop="@dimen/overscan_top_padding">
+<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="45dp"
+        android:layout_width="match_parent">
 
-  <LinearLayout
-      android:id="@+id/metaDataRow"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_centerHorizontal="true"
-      android:layout_marginEnd="10dp"
-      android:layout_toStartOf="@+id/textClock"
-      android:orientation="horizontal">
+  <RelativeLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:paddingTop="@dimen/overscan_top_padding">
 
-    <TextView
-        android:id="@+id/movieCategoryName"
-        style="@android:style/TextAppearance.Holo.Medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical|left"
-        android:focusable="false"
-        android:text="@string/category"
-        />
+    <LinearLayout
+            android:id="@+id/metaDataRow"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_marginEnd="10dp"
+            android:layout_toStartOf="@+id/textClock"
+            android:orientation="horizontal">
 
-    <Spinner
-        android:id="@+id/categoryFilter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:focusable="true"
-        android:gravity="center_vertical|left"
-        android:prompt="@string/movie_category_prompt"
-        android:spinnerMode="dropdown"
-        />
+      <TextView
+              android:id="@+id/movieCategoryName"
+              style="@android:style/TextAppearance.Holo.Medium"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:gravity="center_vertical|left"
+              android:focusable="false"
+              android:text="@string/category"
+              />
 
-    <Spinner
-        android:id="@+id/categoryFilter2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:focusable="true"
-        android:gravity="center_vertical|left"
-        android:prompt="@string/movie_category_prompt2"
-        android:spinnerMode="dropdown"
-        android:visibility="invisible"
-        />
+      <Spinner
+              android:id="@+id/categoryFilter"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginLeft="5dp"
+              android:focusable="true"
+              android:gravity="center_vertical|left"
+              android:prompt="@string/movie_category_prompt"
+              android:spinnerMode="dropdown"
+              />
 
-    <TextView
-        android:id="@+id/subtitleFilter"
-        style="@android:style/TextAppearance.Holo.Medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:gravity="center_vertical|left"
-        android:focusable="false"
-        android:text="Subtitle"
-        android:visibility="gone"
-        />
+      <Spinner
+              android:id="@+id/categoryFilter2"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginLeft="5dp"
+              android:focusable="true"
+              android:gravity="center_vertical|left"
+              android:prompt="@string/movie_category_prompt2"
+              android:spinnerMode="dropdown"
+              android:visibility="invisible"
+              />
 
-    <Spinner
-        android:id="@+id/videoSubtitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:focusable="true"
-        android:gravity="center_vertical|left"
-        android:prompt="@string/movie_category_prompt2"
-        android:spinnerMode="dropdown"
-        android:visibility="gone"
-        />
+      <TextView
+              android:id="@+id/subtitleFilter"
+              style="@android:style/TextAppearance.Holo.Medium"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginLeft="10dp"
+              android:gravity="center_vertical|left"
+              android:focusable="false"
+              android:text="Subtitle"
+              android:visibility="gone"
+              />
+
+      <Spinner
+              android:id="@+id/videoSubtitle"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginLeft="5dp"
+              android:focusable="true"
+              android:gravity="center_vertical|left"
+              android:prompt="@string/movie_category_prompt2"
+              android:spinnerMode="dropdown"
+              android:visibility="gone"
+              />
 
 
-    <TextView
-        android:id="@+id/movieActionBarPosterTitle"
-        style="@android:style/TextAppearance.Holo.Medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:gravity="center_vertical|left"
-        android:textStyle="bold"
-        />
+      <TextView
+              android:id="@+id/movieActionBarPosterTitle"
+              style="@android:style/TextAppearance.Holo.Medium"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginLeft="10dp"
+              android:layout_marginRight="10dp"
+              android:gravity="center_vertical|left"
+              android:textStyle="bold"
+              />
 
-  </LinearLayout>
+    </LinearLayout>
 
-  <us.nineworlds.serenity.ui.views.TextClock
-      android:id="@+id/textClock"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:paddingStart="0dp"
-      android:paddingEnd="10dp"
-      style="@android:style/TextAppearance.Holo.Medium"
-      android:textColor="#F0F0F0"
-      android:layout_alignParentEnd="true"/>
+    <us.nineworlds.serenity.ui.views.TextClock
+            android:id="@+id/textClock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="0dp"
+            android:paddingEnd="10dp"
+            style="@android:style/TextAppearance.Holo.Medium"
+            android:textColor="#F0F0F0"
+            android:layout_alignParentEnd="true"/>
 
-</RelativeLayout>
+  </RelativeLayout>
+
+</androidx.appcompat.widget.Toolbar>
