Remove the Navigation Drawer and update to ToolBar

--- a/serenity-app/src/main/res/layout-large/activity_main.xml
+++ b/serenity-app/src/main/res/layout-large/activity_main.xml
@@ -1,19 +1,8 @@
-<us.nineworlds.serenity.widgets.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              android:id="@+id/drawer_layout"
                                              android:background="@android:color/background_dark"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent">
-
-    <com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/card_background"
-            >
-
-        <include layout="@layout/clock_layout"/>
-
-
-    </com.google.android.material.appbar.AppBarLayout>
 
     <RelativeLayout
             android:id="@+id/mainLayout"
@@ -39,7 +28,7 @@
                     android:name="us.nineworlds.serenity.fragments.MainMenuFragment"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
-                    android:layout_centerInParent="true"/>xit
+                    android:layout_centerInParent="true"/>
 
         </RelativeLayout>
 
@@ -49,8 +38,19 @@
                  android:layout_centerInParent="true"/>
 
     </RelativeLayout>
-    <!-- The navigation drawer -->
 
-    <include layout="@layout/menu_drawer_with_navigation"/>
+    <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/card_background"
+            >
 
-</us.nineworlds.serenity.widgets.DrawerLayout>
+        <include layout="@layout/clock_layout"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginStart="@dimen/overscan_start_padding"
+                android:layout_marginEnd="@dimen/overscan_end_padding"/>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
