--- a/serenity-app/src/main/res/layout-large/activity_movie_search_browser.xml
+++ b/serenity-app/src/main/res/layout-large/activity_movie_search_browser.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<us.nineworlds.serenity.widgets.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,8 +9,8 @@
 
   <RelativeLayout
       android:id="@+id/movieBrowserBackgroundLayout"
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
       >
 
     <ImageView
@@ -30,8 +30,4 @@
 
   </RelativeLayout>
 
-  <!-- The navigation drawer -->
-
-  <include layout="@layout/menu_drawer_with_navigation"/>
-
-</us.nineworlds.serenity.widgets.DrawerLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
