--- a/serenity-app/src/main/res/layout/tvshow_custom_actionbar.xml
+++ b/serenity-app/src/main/res/layout/tvshow_custom_actionbar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="45dp">
@@ -66,4 +66,4 @@
 
     </LinearLayout>
 
-</androidx.appcompat.widget.Toolbar>
+</com.google.android.material.appbar.MaterialToolbar>
