Issue #427 Setup Material Theme for Serenity App

--- a/serenity-app/src/main/res/layout-large/item_server_select_emby.xml
+++ b/serenity-app/src/main/res/layout-large/item_server_select_emby.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/server_option_container"
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
-    android:layout_marginTop="15dp"
-    android:layout_marginBottom="15dp"
-    android:focusable="true"
-    android:clickable="true"
-    android:background="@drawable/selector_server"
-    android:layout_gravity="center_horizontal">
+        xmlns:tools="http://schemas.android.com/tools"
+        style="@style/Widget.MaterialComponents.CardView"
+        android:id="@+id/server_option_container"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:focusable="true"
+        android:clickable="true"
+        android:background="@drawable/selector_focused_item"
+        android:layout_gravity="center_horizontal">
 
   <TextView
       android:id="@+id/server_name"
