--- a/serenity-app/src/main/res/values/dimens.xml
+++ b/serenity-app/src/main/res/values/dimens.xml
@@ -1,57 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+~ Copyright (C) 2019 The Android Open Source Project
+~
+~ Licensed under the Apache License, Version 2.0 (the "License");
+~ you may not use this file except in compliance with the License.
+~ You may obtain a copy of the License at
+~
+~      http://www.apache.org/licenses/LICENSE-2.0
+~
+~ Unless required by applicable law or agreed to in writing, software
+~ distributed under the License is distributed on an "AS IS" BASIS,
+~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+~ See the License for the specific language governing permissions and
+~ limitations under the License.
+-->
+
 <resources>
-  <dimen name="small_image">100dp</dimen>
-  <dimen name="actionbarMargin">60dp</dimen>
-  <dimen name="horizontal_spacing">15dp</dimen>
-  <dimen name="grid_spacing_dimen">5dp</dimen>
-  <dimen name="selector_border_radius">6dp</dimen>
+    <dimen name="keyline_0">2dp</dimen>
+    <dimen name="keyline_1">4dp</dimen>
+    <dimen name="keyline_2">8dp</dimen>
+    <dimen name="keyline_4">16dp</dimen>
+    <dimen name="keyline_5">24dp</dimen>
 
-  <!-- Overscan Compensation -->
-  <dimen name="overscan_top_padding">10dp</dimen>
-  <dimen name="overscan_start_padding">30dp</dimen>
-  <dimen name="overscan_end_padding">30dp</dimen>
-  <dimen name="overscan_bottom_padding">15dp</dimen>
+    <dimen name="component_label_horizontal_margin">@dimen/keyline_4</dimen>
 
-  <!-- Video Meta Data Info Graphics -->
-  <dimen name="info_graphic_width">90dp</dimen>
-  <dimen name="info_graphic_height">48dp</dimen>
+    <dimen name="elevation_default_top_app_bar">4dp</dimen>
 
-  <dimen name="video_infogrpahic_height">30dp</dimen>
-  <dimen name="video_infographic_width">70dp</dimen>
-
-  <dimen name="audio_infographic_width">70dp</dimen>
-  <dimen name="audio_inographic_height">30dp</dimen>
-
-  <dimen name="tv_show_infographic_width">70dp</dimen>
-  <dimen name="tv_show_infographic_height">35dp</dimen>
-
-  <dimen name="search_card_image_width">190dp</dimen>
-  <dimen name="search_card_image_height">260dp</dimen>
-
-  <dimen name="tv_show_image_height">300dp</dimen>
-  <dimen name="tv_show_image_width">200dp</dimen>
-
-  <dimen name="episode_detail_image_width">200dp</dimen>
-  <dimen name="episode_detail_image_height">250dp</dimen>
-
-  <dimen name="episode_image_width">250dp</dimen>
-  <dimen name="episode_image_height">160dp</dimen>
-
-  <dimen name="seasons_episode_image_width">220dp</dimen>
-  <dimen name="seasons_episode_image_height">130dp</dimen>
-
-  <dimen name="banner_image_width">750dp</dimen>
-  <dimen name="banner_image_height">120dp</dimen>
-
-  <dimen name="tvshow_poster_image_width">100dp</dimen>
-  <dimen name="tvshow_poster_image_height">150dp</dimen>
-
-  <dimen name="movie_poster_image_width">100dp</dimen>
-  <dimen name="movie_poster_image_height">150dp</dimen>
-
-  <dimen name="seasons_image_width">100dp</dimen>
-  <dimen name="seasons_image_height">125dp</dimen>
-    <dimen name="video_gallery_image_width">200dp</dimen>
-  <dimen name="video_gallery_image_height">250dp</dimen>
-
+    <!--Emphasis modifiers for "on" colors-->
+    <dimen name="alpha_emphasis_high">@dimen/material_emphasis_high_type</dimen>
+    <dimen name="alpha_emphasis_medium">@dimen/material_emphasis_medium</dimen>
+    <dimen name="alpha_emphasis_disabled">@dimen/material_emphasis_disabled</dimen>
 </resources>
