--- a/serenity-app/src/main/res/layout/movie_custom_actionbar.xml
+++ b/serenity-app/src/main/res/layout/movie_custom_actionbar.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        style="@style/Widget.AppTheme.Toolbar.Transparent"
         android:id="@+id/toolbar"
         android:layout_height="45dp"
         android:layout_width="match_parent">
