--- a/serenity-app/src/main/res/layout/season_custom_actionbar.xml
+++ b/serenity-app/src/main/res/layout/season_custom_actionbar.xml
@@ -2,6 +2,7 @@
 <com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        style="@style/Widget.AppTheme.Toolbar.Transparent"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="45dp">
