--- a/serenity-app/src/main/res/layout/tvshow_custom_actionbar.xml
+++ b/serenity-app/src/main/res/layout/tvshow_custom_actionbar.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/toolbar"
+        style="@style/Widget.AppTheme.Toolbar.Transparent"
         android:layout_width="match_parent"
         android:layout_height="45dp">
 
