--- a/serenity-app/src/main/res/layout-large/item_user_profile.xml
+++ b/serenity-app/src/main/res/layout-large/item_user_profile.xml
@@ -7,6 +7,7 @@
     android:layout_margin="10dp"
     android:focusable="true"
     android:background="@android:color/black"
+    android:foreground="?selectableItemBackground"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
