--- a/serenity-app/src/main/res/layout-large/movie_status_overlay.xml
+++ b/serenity-app/src/main/res/layout-large/movie_status_overlay.xml
@@ -3,4 +3,5 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:focusable="true"/>
+    android:focusable="true"
+    android:foreground="?selectableItemBackground"/>
