--- a/serenity-app/src/main/res/layout-large/poster_tvshow_indicator_view.xml
+++ b/serenity-app/src/main/res/layout-large/poster_tvshow_indicator_view.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:padding="3dp"
     android:focusable="true"
+    android:foreground="?selectableItemBackground"
     >
 
   <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
